--- a/.env
+++ b/.env
@@ -97,6 +97,11 @@ database.tests.DBPrefix =
 # encryption.blockSize = 16
 # encryption.digest = SHA512
 
+#DO NOT CHANGE
+encrypt_method = "AES-256-CBC"
+secret_key = 'webwanderer'
+secret_iv = 'scriptlab2022'
+
 #--------------------------------------------------------------------
 # HONEYPOT
 #--------------------------------------------------------------------
